# Aftograf-882

./: .AI-REWRITE-PROMPT.md  .gitignore  CHECKPOINT.md  FIRMWARE-ANALYSIS.md  HANDOFF.md  README.DE.md  README.FR.md  README.PT.md  README.RU.md  README.UA.md  README.md  RULES.md  Read.Me  SUMMARY.md  aftograf-2026-07-05-17-57-03.json  autograf-882-disassembly.asm  autographprompt.txt  disasm8080.py  runserver.sh  space-shuttle.hpgl
go/: .gitignore  go.mod  trygo.sh
go/cmd/aftograf/: main.go
go/pkg/app/: app.go  app_test.go
go/pkg/cpu/: cpu.go  cpu_test.go
go/pkg/disasm/: disasm.go  disasm_test.go
go/pkg/hpgl/: hpgl.go  hpgl_test.go
go/pkg/memory/: memory.go  memory_test.go
go/pkg/pit8253/: pit8253.go  pit8253_test.go
go/pkg/plotter/: plotter.go  plotter_test.go
go/pkg/ppi8255/: ppi8255.go  ppi8255_test.go
go/pkg/settings/: settings.go  settings_test.go
go/pkg/usart8251/: usart8251.go  usart8251_test.go
rust/: .gitignore  Cargo.toml  TESTS.md  build.rs  tryrust.sh
rust/src/: app.rs  cpu.rs  disasm.rs  hpgl.rs  main.rs  memory.rs  pit8253.rs  plotter.rs  ppi8255.rs  session.rs  settings.rs  usart8251.rs
sim/: build.js  bundle.js  cpu8080.js  hpgl.js  hpgl.test.mjs  index.html  main.js  memory.js  settings.js  styles.css  test882.hpgl  test_all.hpgl  testxx.hpgl  tryjs.sh
