[package]
name = "aftograf"
version = "1.0.10"
edition = "2021"
description = "Aftograf-882 Debug Simulator — native macOS GUI"
authors = ["Aftograf Team"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
eframe = "0.27"
egui = "0.27"
egui-wgpu = "0.27"
wgpu = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
image = "0.25"

[build-dependencies]
anyhow = "1.0"
